<!--
  ~ Copyright © 2018 Nikita Dudko. All rights reserved.
  ~ Contacts: <nikita.dudko.95@gmail.com>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Sweather</string>
    <string name="title_today">Today</string>
    <string name="title_four_days">4 days</string>
    <string name="title_settings">Settings</string>
    <string name="locate">Locate</string>
    <string name="enter_city">Enter the city</string>
    <string name="select_locate_variant">Select an way for identify your location</string>
    <string name="loading">Loading...</string>
    <string name="loading_locate">Definition of your city. Please, wait...</string>
    <string name="action_need_location_permission">Need the location permission for getting your city name
        (or, you can enter the city manually)</string>
    <string name="title_error">Error</string>
    <string name="error_fail_locate">The error occurred while determining your location.
        Try later or enter a city manually</string>
    <string name="title_pref_city">City</string>
    <string name="summary_city">Change your location</string>
    <string name="enter_city_hint">Enter the city</string>
    <string name="city_not_found">The city not found</string>
    <string name="location">Your location</string>
    <string name="checking">Checking...</string>
    <string name="error">Error</string>
    <string name="need_city_name">Need the city name</string>
    <string name="need_network_access">Need the network access</string>
    <string name="weather_provider">provided by OpenWeatherMap</string>
    <string name="summary_locate">Automatically determine the city</string>
    <string name="need_location_permission">
        Need the location permission for automatically determining your city name</string>
    <string name="error_while_locate">The error occurred while determining your location</string>
    <string name="city_determined">The city successful determined</string>
    <string name="compass_n">N</string>
    <string name="compass_s">S</string>
    <string name="compass_e">E</string>
    <string name="compass_w">W</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="temperature_max">Maximum temperature</string>
    <string name="temperature_min">Minimum temperature</string>
    <string name="unit_mmhg">mm Hg</string>
    <string name="unit_celsius">°C</string>
    <string name="unit_meters_per_second">m/s</string>
    <string name="need_network_for_update">Need the network connection for update the weather data</string>
    <string name="update_interval_title">Update interval</string>
    <string name="error_response_code">Error. Response code: </string>
    <string name="temperature">Temperature</string>
</resources>
